# markdown-refcheck

./: .pre-commit-config.yaml  .vultureignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-validation.yml  ci-cd.yml  lint-and-test.yml  publish-to-pypi.yml  version-preview.yml
docs/: CLI-Reference.md  Development-Guide.md  Examples.md  Integration-Guide.md  Understanding-Markdown-References.md
refcheck/: cli.py  main.py  parsers.py  settings.py  validators.py
tests/: conftest.py  test_cli.py  test_main.py  test_parsers.py  test_settings.py  test_utils.py
tests/fixtures/broken_refs/: missing_files.md
tests/fixtures/code_blocks/: code_with_refs.md  inline_code.md
tests/fixtures/edge_cases/: malformed.md  special_characters.md
tests/fixtures/valid/: basic_references.md  inline_links.md
tests/test_validators/: test_file_exists.py  test_header_exists.py  test_is_valid_markdown_reference.py  test_remote_reference.py
